--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,17 @@ body {
     background-color: #d9dcd6;
 }
 
-/* Replaced class tag with header element tag. */
+/* Replaced class tag with header semantic element tag. Converted into flexbox.*/
 header {
+    display: flex;
+    justify-content: space-between;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
@@ -45,7 +47,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -54,7 +56,7 @@ p {
     background-position: center;
 }
 
-.float-left {
+/* .float-left {
     float: left;
     margin-right: 25px;
 }
@@ -62,7 +64,7 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
-}
+} */
 
 /* Replaced content class tag with main semantic tag. */
 main {
@@ -73,6 +75,9 @@ main {
 
 /* Replaced benefits class with aside semantic tag. */
 aside {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -100,7 +105,11 @@ figure img {
     max-width: 150px;
 }
 
+/* Converted to flexbox. */
 section {
+    display: flex;
+    justify-content: space-between;
+    flex: 50%;
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -111,6 +120,7 @@ section {
 
 section img {
     max-height: 200px;
+    max-width: auto;
 }
 
 section h2 {
@@ -129,3 +139,19 @@ footer {
 footer h2 {
     font-size: 20px;
 }
+
+@media screen and (max-width: 768px) {
+    aside {
+      flex-direction: row;
+      float: none;
+      width: auto;
+    }
+  }
+
+  @media screen and (max-width: 972px) {
+    section {
+      flex-direction: column;
+      height: auto;
+      width: auto;
+    }
+  }
